--- a/Cards-jquery.html
+++ b/Cards-jquery.html
@@ -13,51 +13,51 @@
 		<nav>
 			<ul>
 				<li id="logoNav">CODE INSTITUTE</li>
-				<li id="stream1_btn">Stream 1</li>
-				<li id="stream2_btn">Stream 2</li>
-				<li id="stream3_btn">Stream 3</li>
+				<li id="stream1" class="stream-nav">Stream 1</li>
+				<li id="stream2" class="stream-nav">Stream 2</li>
+				<li id="stream3" class="stream-nav">Stream 3</li>
 			</ul>
 		</nav>
-		<div class="card stream1">
+		<div class="card stream1-card">
 			<img class="card_image" src="img/3.png" alt="coding icon">
 			<div class="card_bottom">
 				<h2 class="card_head">HTML</h2>
 				<p id="par1" class="card_para">Once you join a Code Institute Bootcamp you will be taken on an accelerated contextualised learning path across 3 streams. Nothing is learned in isolation.We contextualise the content so that the knowledge and skills gained in each learning unit feeds into, and is expanded upon, within the next unit.The outputs of each stream will be a project. </p>
-				<button id="button_effects1" class="bottom_button">Button</button>
+				<a href="" class="bottom_button">Button</a>
 			</div>
 		</div>
-		<div class="card stream3">
+		<div class="card stream3-card">
 			<img class="card_image" src="img/1.png" alt="coding icon">
 			<h2 class="card_head">MySql</h2>
 			<p id="par2" class="card_para">If you have questions about your career in coding or simply want to meet the Code Institute team, then come along to our next Careers Open Evening in Dublin</p>
-			<button id="button_effects2" class="bottom_button">Button</button>
+			<a href="" class="bottom_button">Button</a>
 		</div>
 
-		<div class="card stream2">
+		<div class="card stream2-card">
 			<img class="card_image" src="img/2.png" alt="coding icon">
 			<h2 class="card_head">Python</h2>
 			<p id="par3" class="card_para">If you have questions about your career in coding or simply want to meet the Code Institute team, then come along to our next Careers Open Evening in Dublin</p>
-			<button id="button_effects3" class="bottom_button">Button</button>
+			<a href="" class="bottom_button">Button</a>
 		</div>
-		<div class="card stream1">
+		<div class="card stream1-card">
 			<img class="card_image" src="img/3.png" alt="coding icon">
 			<div class="card_bottom">
 				<h2 class="card_head">jQuery</h2>
 				<p id="par4" class="card_para">Once you join a Code Institute Bootcamp you will be taken on an accelerated contextualised learning path across 3 streams. Nothing is learned in isolation.We contextualise the content so that the knowledge and skills gained in each learning unit feeds into, and is expanded upon, within the next unit.The outputs of each stream will be a project. </p>
-				<button id="button_effects4" class="bottom_button">Button</button>
+				<a href="" class="bottom_button">Button</a>
 			</div>
 		</div>
-		<div class="card stream3">
+		<div class="card stream3-card">
 			<img class="card_image" src="img/4.png" alt="coding icon">
 			<h2 class="card_head">Django</h2>
 			<p id="par5" class="card_para">The syllabus has been developed to help you transform your career. The summarised syllabus, below, provides you with a snapshop of what skills you will come away with. Feel free to contact us for more detail on what you will learn.</p>
-			<button id="button_effects5" class="bottom_button">Button</button>
+			<a href="" class="bottom_button">Button</a>
 		</div>
-		<div class="card stream1">
+		<div class="card stream1-card">
 			<img class="card_image" src="img/1.png" alt="coding icon">
 			<h2 class="card_head">CSS</h2>
 			<p id="par6" class="card_para">The syllabus has been developed to help you transform your career. The summarised syllabus, below, provides you with a snapshop of what skills you will come away with. Feel free to contact us for more detail on what you will learn.</p>
-			<button id="button_effects6" class="bottom_button">Button</button>
+			<a href="" class="bottom_button">Button</a>
 		</div>
 		<div id="my_footer">
 			<p id="copyright">Copyright Infomation</p>
